# src/Executive/Meetings/Meetings.UI/Minutes/MinutesDetails/MinutesItemViewModel.cs
@@ -9,7 +9,7 @@ public class MinutesItemViewModel
     public int Order { get; set; }
 
     [Required]
-    public MinutesItemType Type { get; set; }
+    public AgendaItemType Type { get; set; }
 
     [Required]
     public string Title { get; set; }
